# ARA-Plumes

./: .gitattributes  .gitignore  CITATION.CFF  README.md  center_of_plume.py  environment.yaml  live_edge_track_record.py  models.py  pyproject.toml  tutorial.ipynb  utils.py
.github/workflows/: main.yml
ara_plumes/: __init__.py  concentric_circle.py  debug.py  debug2.py  models.py  preprocessing.py  regressions.py  typing.py  utils.py
ara_plumes/preprocessing/: __init__.py  data_conversions.py
ara_plumes/tests/: test_all.py  test_concentric_circle.py  test_preprocessing.py  test_regression.py
plume_videos/Bryan_videos/: learn_path.ipynb
plume_videos/July_11/video2/: .2.MP4.icloud  .animation.gif.icloud  .fixed_avg.mp4.zip.icloud  .moving_avg.mp4.icloud  subtraction.ipynb
plume_videos/incense/: .incense.gif.icloud  .vid_0_50_100_150.mov.icloud  get_video.ipynb
plume_videos/video_1237/: .MOV_1237.mp4.icloud  .moving_avg.mp4.icloud  subtract.ipynb
plume_videos/video_1237_test/: test.ipynb
plume_videos/video_1238/: subtraction.ipynb
plume_videos/video_1242/: center_of_plume.ipynb  edge_detection.ipynb  good_poly_coeff_array.npy  poly_coeff_array.npy  subtraction.ipynb
rom_plumes/: concentric_circle.py  models.py  regressions.py  typing.py  utils.py
rom_plumes/tests/: mock_video_utils.py  test_all.py  test_preprocessing.py  test_regression.py
test_functions/: .aug_10.gif.icloud  .aug_10_second.gif.icloud  Aug_10.ipynb  center_and_var.py  center_var_multi.py  concentric_circles.py  edge_detection.py  gaussian_time_blur.py  get_center.py  kde_smoothing.py  live_edge_test.py  live_edge_track.py  savitzky_golay_filtering.py  subtraction.py
test_notebooks/: laurd_backg_subtr.ipynb
tutorial/: gauss_blur_coeff.pkl  tutorial.ipynb
(+2490 files in other folders)
